// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomersList Organism should parse customers and update internal data state (with selected customer) 1`] = `
Object {
  "body": Array [
    Object {
      "avatar": "",
      "email": "an-email",
      "id": 123,
      "name": "a nickname",
      "operator": "a provider",
      "phone": "a-phone",
      "style": Object {
        "background": "#f7f7f7",
      },
    },
  ],
  "columns": Array [
    "select",
    "name",
    "email",
    "phone",
    "operator",
  ],
  "header": Object {
    "email": <FormattedMessage
      id="customerEmail"
      values={Object {}}
/>,
    "name": <FormattedMessage
      id="customerName"
      values={Object {}}
/>,
    "operator": <FormattedMessage
      id="customerPhoneProvider"
      values={Object {}}
/>,
    "phone": <FormattedMessage
      id="customerPhone"
      values={Object {}}
/>,
  },
  "renderer": Object {
    "email": [Function],
    "name": [Function],
    "operator": [Function],
    "phone": [Function],
    "select": [Function],
    "thead": Object {
      "select": [Function],
    },
  },
  "style": Object {
    "email": Object {
      "color": "#8e8e8e",
      "fontFamily": "Roboto",
      "fontSize": "15px",
      "lineHeight": "50px",
      "padding": "0px 20px",
      "position": "relative",
    },
    "name": Object {
      "color": "#222",
      "fontFamily": "Roboto",
      "fontSize": "17px",
      "fontWeight": "500",
      "lineHeight": "50px",
      "padding": "0px 20px",
      "position": "relative",
    },
    "operator": Object {
      "color": "#8e8e8e",
      "fontFamily": "Roboto",
      "fontSize": "15px",
      "lineHeight": "50px",
      "padding": "0px 20px",
      "position": "relative",
    },
    "phone": Object {
      "color": "#8e8e8e",
      "fontFamily": "Roboto",
      "fontSize": "15px",
      "lineHeight": "50px",
      "padding": "0px 20px",
      "position": "relative",
    },
    "select": Object {
      "color": "#8e8e8e",
      "fontFamily": "Roboto",
      "fontSize": "15px",
      "lineHeight": "50px",
      "padding": "0px 20px",
      "position": "relative",
      "width": "1px",
    },
  },
}
`;

exports[`CustomersList Organism should parse customers and update internal data state (with undefined customers) 1`] = `
Object {
  "body": Array [],
  "columns": Array [
    "select",
    "name",
    "email",
    "phone",
    "operator",
  ],
  "header": Object {
    "email": <FormattedMessage
      id="customerEmail"
      values={Object {}}
/>,
    "name": <FormattedMessage
      id="customerName"
      values={Object {}}
/>,
    "operator": <FormattedMessage
      id="customerPhoneProvider"
      values={Object {}}
/>,
    "phone": <FormattedMessage
      id="customerPhone"
      values={Object {}}
/>,
  },
  "renderer": Object {
    "email": [Function],
    "name": [Function],
    "operator": [Function],
    "phone": [Function],
    "select": [Function],
    "thead": Object {
      "select": [Function],
    },
  },
  "style": Object {
    "email": Object {
      "color": "#8e8e8e",
      "fontFamily": "Roboto",
      "fontSize": "15px",
      "lineHeight": "50px",
      "padding": "0px 20px",
      "position": "relative",
    },
    "name": Object {
      "color": "#222",
      "fontFamily": "Roboto",
      "fontSize": "17px",
      "fontWeight": "500",
      "lineHeight": "50px",
      "padding": "0px 20px",
      "position": "relative",
    },
    "operator": Object {
      "color": "#8e8e8e",
      "fontFamily": "Roboto",
      "fontSize": "15px",
      "lineHeight": "50px",
      "padding": "0px 20px",
      "position": "relative",
    },
    "phone": Object {
      "color": "#8e8e8e",
      "fontFamily": "Roboto",
      "fontSize": "15px",
      "lineHeight": "50px",
      "padding": "0px 20px",
      "position": "relative",
    },
    "select": Object {
      "color": "#8e8e8e",
      "fontFamily": "Roboto",
      "fontSize": "15px",
      "lineHeight": "50px",
      "padding": "0px 20px",
      "position": "relative",
      "width": "1px",
    },
  },
}
`;

exports[`CustomersList Organism should parse customers and update internal data state 1`] = `
Object {
  "body": Array [
    Object {
      "avatar": "",
      "email": "an-email",
      "id": 123,
      "name": "a nickname",
      "operator": "a provider",
      "phone": "a-phone",
      "style": null,
    },
  ],
  "columns": Array [
    "select",
    "name",
    "email",
    "phone",
    "operator",
  ],
  "header": Object {
    "email": <FormattedMessage
      id="customerEmail"
      values={Object {}}
/>,
    "name": <FormattedMessage
      id="customerName"
      values={Object {}}
/>,
    "operator": <FormattedMessage
      id="customerPhoneProvider"
      values={Object {}}
/>,
    "phone": <FormattedMessage
      id="customerPhone"
      values={Object {}}
/>,
  },
  "renderer": Object {
    "email": [Function],
    "name": [Function],
    "operator": [Function],
    "phone": [Function],
    "select": [Function],
    "thead": Object {
      "select": [Function],
    },
  },
  "style": Object {
    "email": Object {
      "color": "#8e8e8e",
      "fontFamily": "Roboto",
      "fontSize": "15px",
      "lineHeight": "50px",
      "padding": "0px 20px",
      "position": "relative",
    },
    "name": Object {
      "color": "#222",
      "fontFamily": "Roboto",
      "fontSize": "17px",
      "fontWeight": "500",
      "lineHeight": "50px",
      "padding": "0px 20px",
      "position": "relative",
    },
    "operator": Object {
      "color": "#8e8e8e",
      "fontFamily": "Roboto",
      "fontSize": "15px",
      "lineHeight": "50px",
      "padding": "0px 20px",
      "position": "relative",
    },
    "phone": Object {
      "color": "#8e8e8e",
      "fontFamily": "Roboto",
      "fontSize": "15px",
      "lineHeight": "50px",
      "padding": "0px 20px",
      "position": "relative",
    },
    "select": Object {
      "color": "#8e8e8e",
      "fontFamily": "Roboto",
      "fontSize": "15px",
      "lineHeight": "50px",
      "padding": "0px 20px",
      "position": "relative",
      "width": "1px",
    },
  },
}
`;

exports[`CustomersList Organism should render a customers list 1`] = `
<Paper
  circle={false}
  rounded={true}
  style={
    Object {
      "flex": "1 1 0",
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
  transitionEnabled={true}
  zDepth={1}
>
  <CustomersListstyles__TableWrapper>
    <NaturaTable
      data={
        Object {
          "body": Array [
            Object {
              "avatar": "",
              "email": "an-email",
              "id": 123,
              "name": "a nickname",
              "operator": "a provider",
              "phone": "a-phone",
              "style": null,
            },
          ],
          "columns": Array [
            "select",
            "name",
            "email",
            "phone",
            "operator",
          ],
          "header": Object {
            "email": <FormattedMessage
              id="customerEmail"
              values={Object {}}
        />,
            "name": <FormattedMessage
              id="customerName"
              values={Object {}}
        />,
            "operator": <FormattedMessage
              id="customerPhoneProvider"
              values={Object {}}
        />,
            "phone": <FormattedMessage
              id="customerPhone"
              values={Object {}}
        />,
          },
          "renderer": Object {
            "email": [Function],
            "name": [Function],
            "operator": [Function],
            "phone": [Function],
            "select": [Function],
            "thead": Object {
              "select": [Function],
            },
          },
          "style": Object {
            "email": Object {
              "color": "#8e8e8e",
              "fontFamily": "Roboto",
              "fontSize": "15px",
              "lineHeight": "50px",
              "padding": "0px 20px",
              "position": "relative",
            },
            "name": Object {
              "color": "#222",
              "fontFamily": "Roboto",
              "fontSize": "17px",
              "fontWeight": "500",
              "lineHeight": "50px",
              "padding": "0px 20px",
              "position": "relative",
            },
            "operator": Object {
              "color": "#8e8e8e",
              "fontFamily": "Roboto",
              "fontSize": "15px",
              "lineHeight": "50px",
              "padding": "0px 20px",
              "position": "relative",
            },
            "phone": Object {
              "color": "#8e8e8e",
              "fontFamily": "Roboto",
              "fontSize": "15px",
              "lineHeight": "50px",
              "padding": "0px 20px",
              "position": "relative",
            },
            "select": Object {
              "color": "#8e8e8e",
              "fontFamily": "Roboto",
              "fontSize": "15px",
              "lineHeight": "50px",
              "padding": "0px 20px",
              "position": "relative",
              "width": "1px",
            },
          },
        }
      }
    />
  </CustomersListstyles__TableWrapper>
</Paper>
`;

exports[`CustomersList Organism should render a loading 1`] = `
<Loading
  background="transparent"
  visible={true}
  zIndex={9999}
/>
`;

exports[`CustomersList Organism should render an empty indicator 1`] = `
<Paper
  circle={false}
  rounded={true}
  style={
    Object {
      "height": "100%",
    }
  }
  transitionEnabled={true}
  zDepth={1}
>
  <EmptyList
    descriptionId="customersEmptyListDescription"
    icon="ico_add_customer"
    titleId="customersEmptyList"
  />
</Paper>
`;

exports[`CustomersList Organism should render customers list filtered by name  1`] = `
<Paper
  circle={false}
  rounded={true}
  style={
    Object {
      "flex": "1 1 0",
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
  transitionEnabled={true}
  zDepth={1}
>
  <CustomersListstyles__TableWrapper>
    <NaturaTable
      data={
        Object {
          "body": Array [
            Object {
              "avatar": "",
              "email": "an-another-email",
              "id": 124,
              "name": "another name",
              "operator": "a provider",
              "phone": "an-another-phone",
              "style": null,
            },
          ],
          "columns": Array [
            "select",
            "name",
            "email",
            "phone",
            "operator",
          ],
          "header": Object {
            "email": <FormattedMessage
              id="customerEmail"
              values={Object {}}
        />,
            "name": <FormattedMessage
              id="customerName"
              values={Object {}}
        />,
            "operator": <FormattedMessage
              id="customerPhoneProvider"
              values={Object {}}
        />,
            "phone": <FormattedMessage
              id="customerPhone"
              values={Object {}}
        />,
          },
          "renderer": Object {
            "email": [Function],
            "name": [Function],
            "operator": [Function],
            "phone": [Function],
            "select": [Function],
            "thead": Object {
              "select": [Function],
            },
          },
          "style": Object {
            "email": Object {
              "color": "#8e8e8e",
              "fontFamily": "Roboto",
              "fontSize": "15px",
              "lineHeight": "50px",
              "padding": "0px 20px",
              "position": "relative",
            },
            "name": Object {
              "color": "#222",
              "fontFamily": "Roboto",
              "fontSize": "17px",
              "fontWeight": "500",
              "lineHeight": "50px",
              "padding": "0px 20px",
              "position": "relative",
            },
            "operator": Object {
              "color": "#8e8e8e",
              "fontFamily": "Roboto",
              "fontSize": "15px",
              "lineHeight": "50px",
              "padding": "0px 20px",
              "position": "relative",
            },
            "phone": Object {
              "color": "#8e8e8e",
              "fontFamily": "Roboto",
              "fontSize": "15px",
              "lineHeight": "50px",
              "padding": "0px 20px",
              "position": "relative",
            },
            "select": Object {
              "color": "#8e8e8e",
              "fontFamily": "Roboto",
              "fontSize": "15px",
              "lineHeight": "50px",
              "padding": "0px 20px",
              "position": "relative",
              "width": "1px",
            },
          },
        }
      }
    />
  </CustomersListstyles__TableWrapper>
</Paper>
`;

exports[`CustomersList Organism should render default cell 1`] = `
<div>
  a value
  <Link
    replace={false}
    style={
      Object {
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    to="/my-customers/detail/123"
  />
</div>
`;

exports[`CustomersList Organism should render default cell with null value 1`] = `
<div>
  -
  <Link
    replace={false}
    style={
      Object {
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    to="/my-customers/detail/123"
  />
</div>
`;

exports[`CustomersList Organism should render name cell 1`] = `
<CustomersListstyles__CustomerName>
  <CustomerAvatar
    avatar=""
    name="a name"
    style={
      Object {
        "alignSelf": "center",
        "background": "#f3971f",
        "borderRadius": "100%",
        "color": "#fff",
        "display": "block",
        "fontSize": "17px",
        "height": "50px",
        "lineHeight": "50px",
        "marginLeft": "0",
        "marginRight": "20px",
        "minWidth": "50px",
        "overflow": "hidden",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "50px",
      }
    }
  />
  <CustomersListstyles__NameLabel>
    a name
    <Link
      replace={false}
      style={
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      to="/my-customers/detail/123"
    />
  </CustomersListstyles__NameLabel>
</CustomersListstyles__CustomerName>
`;

exports[`CustomersList Organism should render name cell with avatar 1`] = `
<CustomersListstyles__CustomerName>
  <CustomerAvatar
    avatar="an avatar"
    name="a name"
    style={
      Object {
        "alignSelf": "center",
        "background": "#f3971f",
        "borderRadius": "100%",
        "color": "#fff",
        "display": "block",
        "fontSize": "17px",
        "height": "50px",
        "lineHeight": "50px",
        "marginLeft": "0",
        "marginRight": "20px",
        "minWidth": "50px",
        "overflow": "hidden",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "50px",
      }
    }
  />
  <CustomersListstyles__NameLabel>
    a name
    <Link
      replace={false}
      style={
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      to="/my-customers/detail/123"
    />
  </CustomersListstyles__NameLabel>
</CustomersListstyles__CustomerName>
`;

exports[`CustomersList Organism should render select all 1`] = `
<div
  onClick={[Function]}
>
  <Checkbox
    checked={false}
    disabled={false}
    onCheck={[Function]}
  />
</div>
`;

exports[`CustomersList Organism should render select when not selected 1`] = `
<div
  className=""
  onClick={[Function]}
>
  <Checkbox
    checked={false}
    disabled={false}
    onCheck={[Function]}
  />
</div>
`;

exports[`CustomersList Organism should render select when selected 1`] = `
<div
  className="is-selected"
  onClick={[Function]}
>
  <Checkbox
    checked={
      Object {
        "emails": Array [
          Object {
            "email": "an-email",
          },
        ],
        "id": 123,
        "name": "a name",
        "nickname": "a nickname",
        "phones": Array [
          Object {
            "phone": "a-phone",
            "provider": "a provider",
          },
        ],
      }
    }
    disabled={false}
    onCheck={[Function]}
  />
</div>
`;
